# croissance

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: README.md  cicd.yml
croissance/: __init__.py  __main__.py  main.py
croissance/estimation/: __init__.py  defaults.py  outliers.py  ranking.py  regression.py  util.py
croissance/estimation/smoothing/: __init__.py  segments.py
croissance/figures/: __init__.py  plot.py  writer.py
croissance/formats/: input.py  output.py
docs/: .gitignore  README.md  conf.py  index.md
docs/tutorial/: .jupytext  tutorial.ipynb  tutorial.py
tests/: api_test.py
tests/estimation/: main_test.py  util_test.py
